# gdawglove.github.io

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  index.html  jin.js  jin.wasm  test.js  test.wasm
.clangd/index/: affine-mat.h.368FB3766E17F7D7.idx  affine.h.38FF03381172AE15.idx  affine.h.50233591C3D6B382.idx  affine2d.h.B9A9EB420FFEBD79.idx  anim.c.10E9219A7A757E6E.idx  anim.h.3390383DBA332963.idx  bezier.h.42804308B78433FD.idx  box.h.D3916CDE889684FF.idx  button.h.314061E3FE90E996.idx  cam.h.48197580A113B383.idx  cglm.h.FB9FD7133632583E.idx  color.h.AE34A73072B4FD72.idx  common.h.FD9E51DBDFD4683C.idx  component.h.06950C3C68313B2C.idx  component_magic.h.4792B2D0224CC65B.idx  components.h.4D1C4C2DFDAC61DA.idx  core.c.0C2DE8DD966B5032.idx  core.h.BC79D8B79030A783.idx  core.h.E94693309343DC3E.idx  core_init_jel.c.943EFFEEF61C9426.idx  core_init_res.c.79BEFD1BE84DD6E5.idx  core_init_states.c.741D31052C93CB3C.idx  curve.h.6A7D555AD4554C5E.idx  driver.c.1809E3D35AB6AB77.idx  ease.h.78F991E6546A71B5.idx  entity.h.20AF5D42ECE10CE0.idx  entity_magic.h.EFD2C8373EF3989C.idx  env.c.66E98EE84EFE7F77.idx  env.h.AE2459B0E0D96F1C.idx  env_x11.c.7AE6E91625F08B65.idx  env_x11.h.8E474402665DB733.idx  euler.h.4B82D031B9C9F2DD.idx  frustum.h.C31872C3F9F6E144.idx  gfx.c.89232F9C98E14235.idx  gfx.h.FAAFEC46A19CFEAA.idx  gll.c.F8B25DE33FEB678F.idx  gll.h.94E84E8CCD22B0CC.idx  gll_x11.c.A9F36ED5A1834D55.idx  globals.c.CF0232DB22751BB4.idx  globals.h.1B7DDB9E84484FE4.idx  (+67 more)
.github/workflows/: main.yml
libs/JEL/: component.h  component_magic.h  core.h  entity.h  entity_magic.h  jel.h  query.h  table.h  type.h  utility.h
res/models/: square.mdld
res/shaders/: sprite.shdr  sprite_f.glsl  sprite_v.glsl
src/: driver.c  driver_web.c
src/components/: components.h
src/core/: core.c  core.h  globals.c  globals.h
src/core/env/: env.c  env.h  env_em.c  env_em.h  env_win32.c  env_win32.h  env_x11.c  env_x11.h
src/core/gll/: gll.c  gll.h  gll_em.c  gll_win32.c  gll_x11.c
src/core/inits/: core_init_jel.c  core_init_res.c  core_init_states.c
src/gfx/: gfx.c  gfx.h  model.c  model.h  shader.c  shader.h  sprite.c  sprite.h  texture.c  texture.h
src/resm/: resm.c  resm.h
src/snd/: snd.c  snd.h  wav_util.c  wav_util.h
src/stm/: states.c  states.h  stm.c  stm.h
src/ui/: button.h  ui.c
(+19 files in other folders)
